syntax = "proto3";

package com.ajaxproject.api.internal.warehousesvc.input.reqreply.waybill;

import "com/ajaxproject/api/internal/warehousesvc/commonmodels/waybill/waybill.proto";

option java_package = "com.ajaxproject.api.internal.warehousesvc.input.reqreply.waybill";
option java_multiple_files = true;

message GetWaybillUpdatesByIdRequest {
    string id = 1;
}

message GetWaybillUpdatesByIdResponse {
  commonmodels.waybill.Waybill waybill = 1;
}
